# native-common

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: conan-clean.yml  increment-version.yml  main.yml  nativ-common.yml  release-conanfiles.yml  upload-conan-recipes.yml
cmake/: apply_patch.cmake  conan_bootstrap.cmake  conan_provider.cmake  conan_provider.cmake.patch
common/: CMakeLists.txt  base64.cpp
common/include/common/: base64.h  defs.h
conan/: settings_user.yml
conan/profiles/: apple.jinja  apple.toolchain.cmake  linux.jinja  linux.toolchain.cmake  windows-msvc.jinja  windows.toolchain.cmake
devtools/: devtools_manual.md
scripts/: conan_local_export.py  export_conan.py  increment_version.sh
